<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3291FF"
    android:fitsSystemWindows="true"
    tools:context="com.example.administrator.policetong.activity.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/userid"
        android:layout_alignStart="@+id/userid"
        android:layout_marginBottom="10dp"
        android:src="@drawable/police" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp" />

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginBottom="14dp"
        android:inputType="text"
        android:hint="@string/input_userid"
        android:id="@+id/userid" />


    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="textPassword"
        android:hint="@string/input_pwd" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/text_white" />


</RelativeLayout>
