<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CBFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/notice_title"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notice"
        android:textColor="#fff"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />

    <ListView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/notice_lv"
        android:dividerHeight="1dp"
        android:divider="#c1c1c1"
        />



    <CheckBox
        android:id="@+id/notice_cb"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_button"
        />

    <Button
        android:id="@+id/notice_btn"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/verify"
        />


</LinearLayout>